[package]
name = "maestro"
version = "0.1.0"
authors = ["Brandon Haley <brandon.haley94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
serde_json = "1.0"

[dependencies.songbird]
git = "https://github.com/brandon515/songbird.git"
branch = "current"
version = "0.1.7"

[dependencies.serenity]
version = "0.10"
features = ["cache", "client", "framework", "standard_framework", "voice", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["signal", "macros", "rt-multi-thread"]
